<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authButton" android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/debug_text"
            android:layout_width="346dp"
            android:layout_height="44dp"
            android:id="@+id/debugText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"
            android:layout_marginStart="28dp" android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.444"/>
    <TextView
            android:text="@string/bearer_text"
            android:layout_width="249dp"
            android:layout_height="20dp"
            android:id="@+id/bearerText"
            android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
    />
    <EditText
            android:hint="@string/phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/bearerText"/>
    <EditText
            android:hint="@string/message"
            android:layout_width="246dp"
            android:layout_height="110dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/messageInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneInput"/>
    <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendButton"
            app:layout_constraintBottom_toBottomOf="@+id/messageInput"
            app:layout_constraintEnd_toEndOf="@+id/authButton"/>
    <Button
            android:text="@string/get_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/messageInput"/>
    <TextView
            android:text=""
            android:layout_width="249dp"
            android:layout_height="20dp"
            android:id="@+id/infoText"
            app:layout_constraintTop_toBottomOf="@+id/bearerText" app:layout_constraintStart_toStartOf="@+id/bearerText"
            app:layout_constraintEnd_toEndOf="@+id/bearerText"/>
</androidx.constraintlayout.widget.ConstraintLayout>